tests/baselines/reference/asyncGenerators.classMethod.4.es6.errors.txt
tests/cases/conformance/asyncGenerators/es6/classMethods/asyncGenerators.classMethod.4.es6.ts(2,15): error TS1138: Parameter declaration expected.
tests/cases/conformance/asyncGenerators/es6/classMethods/asyncGenerators.classMethod.4.es6.ts(2,15): error TS2304: Cannot find name 'await'.
tests/cases/conformance/asyncGenerators/es6/classMethods/asyncGenerators.classMethod.4.es6.ts(2,20): error TS1005: ';' expected.
tests/cases/conformance/asyncGenerators/es6/classMethods/asyncGenerators.classMethod.4.es6.ts(3,1): error TS1128: Declaration or statement expected.


==== tests/cases/conformance/asyncGenerators/es6/classMethods/asyncGenerators.classMethod.4.es6.ts (4 errors) ====
    class C {
        async * f(await) {}
                  ~~~~~
!!! error TS1138: Parameter declaration expected.
                  ~~~~~
!!! error TS2304: Cannot find name 'await'.
                       ~
!!! error TS1005: ';' expected.
    }
    ~
!!! error TS1128: Declaration or statement expected.